integration and python optimizations