@@ -4,6 +4,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.util.ArrayList;
 
 import org.python.core.PyClass;
 import org.python.core.PyInteger;
@@ -11,9 +12,12 @@ import org.python.core.PyObject;
 import org.python.core.PyString;
 import org.python.util.PythonInterpreter;
 import com.google.gson.Gson;
+import com.google.gson.reflect.TypeToken;
 
+import models.ApkModel;
 import models.ApplicationPermissionsModel;
 import models.LibraryModel;
+import models.PermissionMethodCallModel;
 
 public class APKAnalyzer {
 
@@ -74,34 +78,88 @@ public class APKAnalyzer {
 		return libModels;
 	}
 	
-	
-	
-	public static void main(String[] args) throws Exception {
-		/*PythonInterpreter pythonInterpreter = new PythonInterpreter();
-	 	pythonInterpreter.exec("from myscript import myFuncts"); 
-	 	PyClass dividerDef = (PyClass) pythonInterpreter.get("myFuncts");
-        PyObject divider = dividerDef.__call__();
-        PyObject pyObject = divider.invoke("analyzeAPK",new PyString("apks/app2.apk"));
-        String realResult = pyObject.toString();
-        pythonInterpreter.close();
-	 	
-	 	if (true) return;*/
-		//ProcessBuilder pb = new ProcessBuilder("python","mypythonscripts/myscript.py");
-		//Process p = pb.start();
-		Process p = Runtime.getRuntime().exec("python mypythonscripts/myscript.py");
+	public ApkModel getApkInformation(String apkPath) throws IOException {
+		String run="python mypythonscripts/myscript.py -m analyze -f "+apkPath;
+		Process p = Runtime.getRuntime().exec(run);
 		BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
 		StringBuilder sb = new StringBuilder();
 
 	    String line = null;
 	   
 	      while ((line = in.readLine()) != null) {
-	    	  System.out.println(line);
+	    	  //System.out.println(line);
 	        sb.append(line + "\n");
 	      }
 
 	    String x= sb.toString();
+		System.out.println(x);
+		Gson g = new Gson();
+		ApkModel apk= g.fromJson(x,ApkModel.class);
+		return apk;
+	}
+	
+	public ArrayList<PermissionMethodCallModel> getCalls(String apkPath,ArrayList<String> permissionList) throws IOException {
+		
+		String pList="";
+		for (int i=0;i<permissionList.size();i++) {
+			pList=pList+permissionList.get(i)+",";
+		}
+
+		String run="python mypythonscripts/myscript.py -m call -f "+apkPath+" -p "+pList;
+		Process p = Runtime.getRuntime().exec(run);
+		BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+		StringBuilder sb = new StringBuilder();
+
+	    String line = null;
+	   
+	      while ((line = in.readLine()) != null) {
+	    	  //System.out.println(line);
+	        sb.append(line + "\n");
+	      }
+
+	    String x= sb.toString();
+		//System.out.println(x);
+		Gson g = new Gson();
+		ArrayList<PermissionMethodCallModel> calls= g.fromJson(x, new TypeToken<ArrayList<PermissionMethodCallModel>>() {
+        }.getType());
+		
+		
+		return uniqueList(calls);
+		
+	}
+	
+	private ArrayList<PermissionMethodCallModel> uniqueList(ArrayList<PermissionMethodCallModel> list){
+		ArrayList<PermissionMethodCallModel> x=new ArrayList<PermissionMethodCallModel>();
+		for (PermissionMethodCallModel pmc:list) {
+			if(!x.contains(pmc)) {
+				x.add(pmc);
+			}
+			
+		}
+		return x;
+		
+		
+	}
+	
+	
+	public static void main(String[] args) throws Exception {
+
+		
+		ArrayList<String> permissionList= new ArrayList<String>();
+		permissionList.add("android.permission.CHANGE_WIFI_STATE");
+		permissionList.add("android.permission.ACCESS_WIFI_STATE");
+		ArrayList<PermissionMethodCallModel> x=new APKAnalyzer().getCalls("apks/app2.apk", permissionList);
+		
+		
 		
 		
 
+		System.out.println(x.toString());
+	
+		//new APKAnalyzer().getApkInformation("apks/app2.apk");
+		
+		
+
+		
 }
 }
